--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -8,7 +8,7 @@
       data: { confirm: "Are you sure?" } %></p>
     <% end %>
 </ul>
-<%= link_to "Back to cocktails", cocktails_path(@cocktails), :class => "button"  %>
+<%= link_to "Back to cocktails", root_path(@cocktails), :class => "button"  %>
 <%= link_to "New ingredient", new_cocktail_dose_path(@cocktail), :class => "button"  %>
 </div>
 
