--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,6 +1,7 @@
 <div class ="container">
 <%= simple_form_for(@cocktail) do |f| %>
   <%= f.input :name%>
+  <%= f.input :photo, as: :file %>
   <%= f.submit "add a cocktail", class: "button" %>
   <% if @cocktail.errors.any? %>
     <div class="errors-container">
