--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,16 +1,26 @@
 <div class="container">
-<h1><%= @cocktail[:name] %></h1>
-<ul>
-  <% @cocktail.doses.each do |dose| %>
-  <li><%=dose.description%> <%=dose.ingredient.name%></li>
-    <p><%= link_to "Delete", dose_path(dose),
-      method: :delete,
-      data: { confirm: "Are you sure?" } %></p>
-    <% end %>
-</ul>
-<%= cl_image_tag @cocktail.photo.key, height: 300, width: 400, crop: :fill %>
-<%= link_to "Back to cocktails", root_path(@cocktails), :class => "button"  %>
-<%= link_to "New ingredient", new_cocktail_dose_path(@cocktail), :class => "button"  %>
+<div class="heading text-center p-10">
+  <h1><%= @cocktail[:name] %></h1>
+  <div class="cocktail-description-card d-flex justify-content-left">
+     <%= cl_image_tag @cocktail.photo.key, height: 300, width: 400, crop: :fill %>
+    <ul>
+      <% @cocktail.doses.each do |dose| %>
+      <div class="justify-content-between">
+      <li><%=dose.description%> <%=dose.ingredient.name%>
+      <%= link_to "Delete", dose_path(dose),
+          method: :delete,
+          data: { confirm: "Are you sure?" } %>
+        <% end %>
+      </li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="d-flex justify-content-center m-5">
+  <%= link_to "Back to cocktails", root_path(@cocktails), :class => "button m-5"  %>
+  <%= link_to "New ingredient", new_cocktail_dose_path(@cocktail), :class => "button m-5"  %>
+</div>
+
 </div>
 
 
