--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-<div class="heading text-center p-10">
+<div class="container pt-5">
+<div class="heading text-center p-10 m-10">
   <h1><%= @cocktail[:name] %></h1>
   <div class="cocktail-description-card d-flex justify-content-left">
      <%= cl_image_tag @cocktail.photo.key, height: 300, width: 400, crop: :fill %>
@@ -20,7 +20,8 @@
   <%= link_to "Back to cocktails", root_path(@cocktails), :class => "button m-5"  %>
   <%= link_to "New ingredient", new_cocktail_dose_path(@cocktail), :class => "button m-5"  %>
 </div>
-
 </div>
+
+
 
 
